# Loki-DM

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/logo/: README.md
crates/loki-dm-cli/: Cargo.toml
crates/loki-dm-cli/src/: main.rs
crates/loki-dm-cli/tests/: native_manifests.rs
crates/loki-dm-core/: Cargo.toml
crates/loki-dm-core/benches/: local_download.rs
crates/loki-dm-core/src/: av.rs  config.rs  cookies.rs  engine.rs  error.rs  external_downloader.rs  lib.rs  media.rs  metadata.rs  native_messaging.rs  queue.rs  rate_limit.rs  scheduler.rs  settings.rs  spider.rs  types.rs  updater.rs
crates/loki-dm-core/tests/: queue_sync.rs  range_download.rs
crates/loki-dm-gui/: Cargo.toml  tauri.conf.json
crates/loki-dm-gui/capabilities/: default.json
crates/loki-dm-gui/icons/: icon.icns
crates/loki-dm-gui/src/: main.rs
crates/loki-dm-gui/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
crates/loki-dm-gui/web/src/: App.jsx  index.css
extensions/chromium/: background.js  manifest.json
extensions/firefox/: content.js  manifest.json  panel.html  panel.js
extensions/native-host/: com.loki.dm.chrome.json  com.loki.dm.firefox.json
packaging/: README.md
packaging/linux/: loki-dm.appdata.xml  loki-dm.desktop
packaging/macos/: Info.plist
packaging/windows/: loki-dm.wxs
scripts/: benchmarks.sh  cross-build.sh  profile.sh
