[package]
name = "loki-dm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
dirs.workspace = true
futures-util.workspace = true
m3u8-rs.workspace = true
rand.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
axum = "0.8"
tempfile = "3.15"
tokio.workspace = true

[[bench]]
name = "local_download"
harness = false
